# git-semver

./: .gitignore  .gitlab-ci.yml  README.rst  git_semver.py  setup.cfg  setup.py  tox.ini
git_semver/: __init__.py  __main__.py  printer.py  version_info.py
git_semver/test/: test_git_semver.py  test_version_info.py
