[metadata]
name = git-semver
version = attr:git_semver.__version__
url = https://github.com/comargo/git-semver
author = Cyril Margorin
author_email = comargo@gmail.com
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Topic :: Software Development :: Version Control :: Git
license = GNU General Public License v3 or later (GPLv3+)
description = Retrieving semantic versioning from git tags
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst

[options]
packages = git_semver

[options.entry_points]
console_scripts =
    git-semver=git_semver:main
